# discord-next

./: Cargo.toml  README.md
.github/workflows/: test.yaml
examples/: basic_chatbot.rs  channel_permissions.rs  dj.rs  logbot.rs  login_cache.rs  voice_receive.rs
src/: builders.rs  connection.rs  error.rs  lib.rs  model.rs  ratelimit.rs  serial.rs  state.rs  voice.rs
src/connection/: with_voice.rs  without_voice.rs
tests/: channels.rs  messages.rs
tests/utils/: mod.rs
